--- a/TaskManager.Infrastructure/TaskManager.Infrastructure.csproj
+++ b/TaskManager.Infrastructure/TaskManager.Infrastructure.csproj
@@ -10,4 +10,18 @@
       <ProjectReference Include="..\TaskManager.Domain\TaskManager.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.0-preview2.25178.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Data\Context\" />
+    </ItemGroup>
+
 </Project>
