Added first basic Service

--- a/TaskManager.Application/TaskManager.Application.csproj
+++ b/TaskManager.Application/TaskManager.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\TaskManager.Domain\TaskManager.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTO`s\" />
+    </ItemGroup>
+
 </Project>
